intear-dex-management/tests/snapshots/writes__assets_register_when_registered.snap
---
source: intear-dex-management/tests/writes.rs
expression: "cli.transaction(\"alice.near\",\n&[\"engine\", \"assets\", \"register\", \"alice.near\", \"near\"]).await"
---
$ near-intear-dex-management engine assets register alice.near near network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management engine assets register alice.near near network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send

Error:
   0: near is already registered for alice.near
