intear-dex-management/tests/snapshots/writes__assets_register_with_storage_top_up.snap
---
source: intear-dex-management/tests/writes.rs
expression: "transaction_with_registration(&sandbox, &cli, \"bob.near\",\n&[\"engine\", \"assets\", \"register\", \"bob.near\",\n\"near,nep141:usdt.tether-token.near\"]).await"
---
$ near-intear-dex-management engine assets register bob.near near,nep141:usdt.tether-token.near network-config sandbox sign-with-plaintext-private-key ed25519:2y9ToyGhuue7muH4Y5sStZpcGuQ7Wmaq5g5MnT1c2LSn3rr6rSJh5f99BBi4qr3umKDznj6LTV71XGtji1dadTbt send
exit code: 0
--- stdout ---
--- stderr ---
├  sandbox · signer bob.near · dex.intear.near
│  Deposit 0.005 NEAR into bob.near's storage balance on dex.intear.near
│  Register near, nep141:usdt.tether-token.near for bob.near, which takes about 0.00251 NEAR of bob.near's storage balance
│  Actions: storage_deposit (0.005 NEAR, 10 Tgas), register_assets (1 yoctoNEAR, 11 Tgas)
├  Unsigned transaction:
│    signer_id:    bob.near
│    receiver_id:  dex.intear.near
│    actions:
│       -- function call:
│                       method name:  storage_deposit
│                       args:         {}
│                       gas:          10.0 Tgas
│                       deposit:      0.005 NEAR
│       -- function call:
│                       method name:  register_assets
│                       args:         {
│                                       "asset_ids": [
│                                         "near",
│                                         "nep141:usdt.tether-token.near"
│                                       ],
│                                       "for": null
│                                     }
│                       gas:          11.0 Tgas
│                       deposit:      1 yoctoNEAR
│
├  Your transaction was signed successfully.
│    Public key: ed25519:[HASH]
│    Signature:  ed25519:[SIGNATURE]
│
├  Transaction Execution Info:
│    Gas burned: [GAS]
│    Transaction fee: [FEE]
│    Transaction ID: [HASH]
│    To see the transaction in the transaction explorer, please open this url in your browser:
│    http://[SANDBOX RPC]/transactions/[HASH]
│
├  Function execution logs:
│    Logs [dex.intear.near]:   No logs
│    Logs [bob.near]:   No logs
│
├  Function execution return value:
│    Empty return value
│
├  Function execution logs:
│    Logs [dex.intear.near]:   No logs
│    Logs [bob.near]:   No logs
│
├  Function execution return value:
│    Empty return value
│


The "storage_deposit" call to <dex.intear.near> on behalf of <bob.near> succeeded.
The "register_assets" call to <dex.intear.near> on behalf of <bob.near> succeeded.

├  ✓ Registered near, nep141:usdt.tether-token.near for bob.near on dex.intear.near


Here is your console command if you need to script it or re-run:
    near intear-dex-management engine assets register bob.near near,nep141:usdt.tether-token.near network-config sandbox sign-with-plaintext-private-key ed25519:2y9ToyGhuue7muH4Y5sStZpcGuQ7Wmaq5g5MnT1c2LSn3rr6rSJh5f99BBi4qr3umKDznj6LTV71XGtji1dadTbt send
