intear-dex-management/tests/snapshots/writes__deposit_more_than_the_wallet_has.snap
---
source: intear-dex-management/tests/writes.rs
expression: "cli.transaction(\"alice.near\",\n&[\"engine\", \"deposit\", \"alice.near\", \"nep141:usdt.tether-token.near\",\n\"10 USDt\"]).await"
---
$ near-intear-dex-management engine deposit alice.near nep141:usdt.tether-token.near '10 USDt' network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management engine deposit alice.near nep141:usdt.tether-token.near '10 USDt' network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send

Error:
   0: alice.near has 0 USDt in its wallet, but this needs 10 USDt
