intear-dex-management/tests/snapshots/writes__deposit_unsupported_asset.snap
---
source: intear-dex-management/tests/writes.rs
expression: "cli.transaction(\"alice.near\",\n&[\"engine\", \"deposit\", \"alice.near\", \"nep171:nft.near:1\", \"1 raw\"]).await"
---
$ near-intear-dex-management engine deposit alice.near nep171:nft.near:1 '1 raw' network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management engine deposit alice.near nep171:nft.near:1 '1 raw' network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send

Error:
   0: Depositing nep171:nft.near:1 isn't supported yet

Suggestion: Send it to dex.intear.near with nft_transfer_call or mt_transfer_call on its contract
