intear-dex-management/tests/snapshots/writes__pause_by_account_outside_can_pause.snap
---
source: intear-dex-management/tests/writes.rs
expression: "cli.transaction(\"alice.near\", &[\"engine\", \"pause\", \"alice.near\"]).await"
---
$ near-intear-dex-management engine pause alice.near network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management engine pause alice.near network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send

Error:
   0: alice.near can't pause or unpause dex.intear.near

Suggestion: Sign with slimedragon.near or pause.slimedragon.near
